--- a/SchoolToLaborForm.html
+++ b/SchoolToLaborForm.html
@@ -86,7 +86,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section once="footers" class="cid-rCGl03kkXK" id="footer6-6n">
 
     
 
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="dfFmFg0iNUFhuz2/WPmiHlZjCIzP083UFGcWQidVcZnXx8Rb1MQNaM0ruE4xKWV69kbPaT0k+EnQC2KneixU2lKWx2wDO7ZmRYJjZ6xyYK0Pvh3nCgYe9xHuZBy/EcJG">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bxCu24uStkkOPysU/hQMfjVkFspBq9eEfmN8nI0XxO8Y37YFqtdhOGkCq6GLl8+FQ1Ya2muBPHenrXkNWZBAfttUz9l71cPcNm41N4GxXXzEIoCW2ufgN0YttgeNHHaf">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
