--- a/TrainingSearch.html
+++ b/TrainingSearch.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section once="footers" class="cid-rDq1AEYwto" id="footer6-7b">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4KezYYcQ+aXYmL8vbRTdS8jp9KuN+6iZvAdW/g19WleDO5bUji31O8NzhFZpe7YGSg4O9Ch1PMkkvjvLmpjxYav+UbAQrtTcMebGLwPFAXLGNxNEF9k9Pc7AE4RmxeKZ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="RQvVTvSthUeP/yH1tvqKqjIhDqHsNlsFu/JHtHMAspnRSKwCyQTvLj27MkDQBK9V80G2gSkJCogdUdwqXDZKALTaXqkqUaYdOJJz1Si5ziwDDDWLC1IP1dAnMBV9/IQk">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
