--- a/Indicators.html
+++ b/Indicators.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-5f">
 
     
 
@@ -114,7 +114,7 @@
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
                     Full width intro with adjustable height, background image and a color overlay. Click any text to edit or style it.
                 </p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-5" href="index.html#features3-8j">More</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-success display-5" href="Indicators.html">More</a></div>
             </div>
         </div>
     </div>
@@ -146,7 +146,7 @@
                             </h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">LMIS Indicators</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                Labour Market Indicators
+                                Labour Market Indicators Labour Market Indicators
                             </p>
                         </div>
                     </div>
@@ -164,7 +164,7 @@
                             </h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">LMIS Indicators</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                    Labour Market Indicators
+                                    Labour Market Indicators Labour Market Indicators
                             </p>
                         </div>
                     </div>
@@ -181,8 +181,7 @@
                             </h3>
                             <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">LMIS Indicators</h4>
                             <p class="mbr-content-text mbr-fonts-style display-7">
-                                    Labour Market Indicators
-                            </p>
+                                    Labour Market Indicators&nbsp;Labour Market Indicators</p>
                         </div>
                     </div>
                 </div>
@@ -206,7 +205,7 @@
                 <h2 class="mbr-section-title pb-3 align-left mbr-fonts-style display-2">Labour Market Indicators</h2>
                 <h3 class="mbr-section-subtitle pb-5 align-left mbr-fonts-style display-5">Labour Market Indicators</h3>
                 <div class="mbr-figure">
-                    <img src="assets/images/background630.jpg">
+                    <img src="assets/images/background634.jpg">
                 </div>
             </div>
             <div class="cards-block">
