create github pages

--- a/JobSearch.html
+++ b/JobSearch.html
@@ -12,13 +12,14 @@
   <title>JobSearch</title>
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="preload" as="style" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
+<link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
@@ -26,6 +27,7 @@
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -85,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6w">
 
     
 
@@ -109,31 +111,31 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="a6T3xuMINxvbG1O8wILY0TzZDDanYMTYU6Ch0pMK/icSvO/GQQUa/3bUrIqcS0EkelhRCIuDrbNPt/KM0J3OrcRk2VRPUeh4hL8ZcrK8slHQYBa83nwPMJXrYnBaibHO">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ughs0hlmBDGQsdLbV7ULR9uJchuHpbwojjpxfWTUTHd0FrVXLGjFmFG1Ssi9JJI1UxKD04th0DjBMycmCi3/2JcJENTi28VDfAFXXPCbb4J94hAuDDRe3K8G2MZN0/a0">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2">Job Search</h4>
+<h4 class="mbr-fonts-style display-2"><strong>Job Search</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
 </div>
 <div data-for="text" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="text" placeholder="بحث حر" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-6z">
+<input type="text" name="text" placeholder="Free search" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-6z">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="text1">
-<input type="text" name="text1" placeholder="بالمكان" data-form-field="text1" class="form-control display-7" value="" id="text1-formbuilder-6z">
+<input type="text" name="text1" placeholder="By Location" data-form-field="text1" class="form-control display-7" value="" id="text1-formbuilder-6z">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="text2">
-<input type="text" name="text2" placeholder="بالوظيفة" data-form-field="text2" class="form-control display-7" value="" id="text2-formbuilder-6z">
+<input type="text" name="text2" placeholder="by Job" data-form-field="text2" class="form-control display-7" value="" id="text2-formbuilder-6z">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
-<textarea name="message" placeholder="كلمات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-6z"></textarea>
+<textarea name="message" placeholder="Free search" data-form-field="message" class="form-control display-7" id="message-formbuilder-6z"></textarea>
 </div>
-<div class="col-auto"><button type="submit" class="btn btn-primary display-7">Search</button></div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbrib-search mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>&nbsp; Search</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -146,8 +148,8 @@
   
   
   <div class="container container-table">
-      <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">
-          Search Result</h2>
+      <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2"><strong>
+          Search Result</strong></h2>
       <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
             Click blue "Gear" icon in the top right corner to hide/show search and info, change the the table background and other parameters.  In browser click on the table head to sort the table, use search to filter the table.     
       </h3>
