--- a/SelfAsses.html
+++ b/SelfAsses.html
@@ -18,12 +18,12 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -83,7 +83,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-6j">
 
     
 
@@ -107,14 +107,14 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="TaPQWE7wnb3iP30z9f4pSU9dMI2AmAci5l/M7Ko3DTTcZQ7kYxWCnIWkhHbNQr+1W5sU9Q0lH9Jy7jKCzKXEV6FcRqXhUtNtjQEf4fNH4UArHQRv25A0iiP8w6GhSkBp">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
 <div class="col-lg-12 col-md-12 col-sm-12">
-<h4 class="mbr-fonts-style display-2">Self Assesment</h4>
+<h4 class="mbr-fonts-style display-2"><strong>Self Assesment</strong></h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
@@ -138,104 +138,44 @@
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <input type="tel" name="phone" placeholder="محمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-6k">
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="message">
-<textarea name="message" placeholder="معلومات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-6k"></textarea>
-</div>
+
 <div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="checkbox" style="transform: translateZ(0px);">
 <div class="form-control-label">
 <label for="checkbox" class="mbr-fonts-style display-7">مهارات ادارية</label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="تواصل" data-form-field="تواصل" class="form-check-input display-7" id="تواصل-formbuilder-6k">
+
 <label class="form-check-label display-7">تواصل</label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="عرض" data-form-field="عرض" class="form-check-input display-7" id="عرض-formbuilder-6k">
+
 <label class="form-check-label display-7">عرض</label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="كتابة" data-form-field="كتابة" class="form-check-input display-7" id="كتابة-formbuilder-6k">
+
 <label class="form-check-label display-7">كتابة</label>
 </div>
 </div>
 <div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="checkbox1">
 <div class="form-control-label">
-<label for="checkbox1" class="mbr-fonts-style display-7">مهارات الحاسب</label>
+<label for="checkbox1" class="mbr-fonts-style display-7"></label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="ميكروسوفت وورد" data-form-field="ميكروسوفت وورد" class="form-check-input display-7" id="ميكروسوفت وورد-formbuilder-6k">
-<label class="form-check-label display-7">ميكروسوفت وورد</label>
+
+<label class="form-check-label display-7"></label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="ميكروسوف اكسل" data-form-field="ميكروسوف اكسل" class="form-check-input display-7" id="ميكروسوف اكسل-formbuilder-6k">
-<label class="form-check-label display-7">ميكروسوف اكسل</label>
+
+<label class="form-check-label display-7"></label>
 </div>
 <div class="form-check">
-<input type="checkbox" value="Yes" name="بوربوينت" data-form-field="بوربوينت" class="form-check-input display-7" id="بوربوينت-formbuilder-6k">
-<label class="form-check-label display-7">بوربوينت</label>
+
+<label class="form-check-label display-7"></label>
 </div>
 </div>
-<div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="radio">
-<div class="form-control-label">
-<label for="radio-formbuilder-6k" class="mbr-fonts-style display-7">مهارات فنية</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="تجارى" checked="" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">تجارى</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="صناعى" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">صناعى</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="زراعى" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">زراعى</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="خشبية" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">خشبية</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="سياحية" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">سياحية</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio" data-form-field="radio" class="form-check-input display-7" value="أخرى" id="radio-formbuilder-6k">
-<label class="form-check-label display-7">أخرى</label>
-</div>
-</div>
-<div class="col-lg-6 col-md-12 col-sm-12 form-group" data-for="radio1">
-<div class="form-control-label">
-<label for="radio1-formbuilder-6k" class="mbr-fonts-style display-7">Radio</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="First" checked="" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">First</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="Second" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">Second</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="Third" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">Third</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="Option" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">Option</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="Option" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">Option</label>
-</div>
-<div class="form-check">
-<input type="radio" name="radio1" data-form-field="radio1" class="form-check-input display-7" value="Option" id="radio1-formbuilder-6k">
-<label class="form-check-label display-7">Option</label>
-</div>
-</div>
-<div class="col-auto">
-<button type="submit" class="btn btn-primary display-7">&lt;span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"&gt;&lt;/span&gt;</button>
-</div>
+
+
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7">&lt;span class="mobi-mbri mobi-mbri-save mbr-iconfont mbr-iconfont-btn"&gt;&lt;/span&gt;</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -247,17 +187,16 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
-  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/tether/tether.min.js"></script>
+  <script async src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.min.js"></script>
   <script async src="assets/datepicker/jquery.datetimepicker.full.js"></script>
+  <script async src="assets/dropdown/js/nav-dropdown.js"></script>
+  <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
