--- a/JobAdd.html
+++ b/JobAdd.html
@@ -10,6 +10,8 @@
   <meta name="description" content="Website Creator Description">
   
   <title>JobAdd</title>
+  <link rel="preload" as="style" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
+<link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="preload" as="style" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
@@ -18,14 +20,14 @@
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap-reboot.min.css">
 <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.css">
   <link rel="stylesheet" href="assets/formstyler/jquery.formstyler.theme.css">
   <link rel="stylesheet" href="assets/datepicker/jquery.datetimepicker.min.css">
   <link rel="stylesheet" href="assets/datatables/data-tables.bootstrap4.min.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -85,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-71">
 
     
 
@@ -109,9 +111,9 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="F8HnoXUsZKrZWpqIPazmq05POoyllkqpFchWhmGiHk2Q93vkXIyjYuY5/ELPWt0VPT7x7VlvENKmhJHj74qTIHqUloiAH2e9posgkvPEGOi99JFGxsLtareU5BpsHSIU">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler">
 <div class="form-row">
-<div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
+
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
 </div>
 <div class="dragArea form-row">
@@ -119,41 +121,39 @@
 <h4 class="mbr-fonts-style display-2">Add a New Job</h4>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="text">
-<input type="text" name="text" placeholder="الوظيفة المطلوبة" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-72">
+<input type="text" name="text" placeholder="Required job" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-72">
 </div>
 <div data-for="text1" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="text1" placeholder="الشركة" data-form-field="text1" class="form-control display-7" value="" id="text1-formbuilder-72">
+<input type="text" name="text1" placeholder="Employer" data-form-field="text1" class="form-control display-7" value="" id="text1-formbuilder-72">
 </div>
 <div data-for="text2" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="text2" placeholder="عدد سنوات الخبرة" data-form-field="text2" class="form-control display-7" value="" id="text2-formbuilder-72">
+<input type="text" name="text2" placeholder="Job title" data-form-field="text2" class="form-control display-7" value="" id="text2-formbuilder-72">
 </div>
 <div data-for="JobDescription" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="text" name="JobDescription" placeholder="الوصف الوظيفى" data-form-field="text3" class="form-control display-7" value="" id="JobDescription-formbuilder-72">
+<input type="text" name="JobDescription" placeholder="Job Description" data-form-field="text3" class="form-control display-7" value="" id="JobDescription-formbuilder-72">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12">
 <hr>
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="name">
-<input type="text" name="name" placeholder="اسم المعلن" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-72">
+<input type="text" name="name" placeholder="location " data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-72">
 </div>
 <div data-for="email" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="البريد الالكترونى" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-72">
+<input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-72">
 </div>
 <div data-for="phone" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="المحمول" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-72">
+<input type="tel" name="phone" placeholder="Mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-72">
 </div>
 <div data-for="message" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<textarea name="message" placeholder="معلومات أخرى" data-form-field="message" class="form-control display-7" id="message-formbuilder-72"></textarea>
+<textarea name="message" placeholder="Required Skills" data-form-field="message" class="form-control display-7" id="message-formbuilder-72"></textarea>
 </div>
 <div data-for="textarea" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<textarea name="textarea" placeholder="معلومات أخرى" data-form-field="textarea" class="form-control display-7" id="textarea-formbuilder-72"></textarea>
+<textarea name="textarea" placeholder="Required Quaification" data-form-field="textarea" class="form-control display-7" id="textarea-formbuilder-72"></textarea>
 </div>
 <div data-for="textarea1" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<textarea name="textarea1" placeholder="معلومات أخرى" data-form-field="textarea1" class="form-control display-7" id="textarea1-formbuilder-72"></textarea>
+<textarea name="textarea1" placeholder="Other details" data-form-field="textarea1" class="form-control display-7" id="textarea1-formbuilder-72"></textarea>
 </div>
-<div class="col-auto">
-<button type="submit" class="btn btn-primary display-7">حفظ البيانات</button>
-</div>
+<div class="col-auto"><button type="submit" class="btn btn-primary display-7"><span class="mbrib-save mbr-iconfont mbr-iconfont-btn" style="font-size: 20px;"></span>&nbsp; Save&nbsp;</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
@@ -284,6 +284,7 @@
   <script async src="assets/dropdown/js/nav-dropdown.js"></script>
   <script async src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script async src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.js"></script>
   <script async src="assets/formstyler/jquery.formstyler.min.js"></script>
@@ -291,9 +292,7 @@
   <script async src="assets/datatables/jquery.data-tables.min.js"></script>
   <script async src="assets/datatables/data-tables.bootstrap4.min.js"></script>
   <script async src="assets/sociallikes/social-likes.js"></script>
-  <script async src="assets/tether/tether.min.js"></script>
   <script async src="assets/theme/js/script.js"></script>
-  <script async src="assets/formoid/formoid.min.js"></script>
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
