--- a/TrainingProviders.html
+++ b/TrainingProviders.html
@@ -85,7 +85,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section once="footers" class="cid-rDq2pXwqU5" id="footer6-7g">
 
     
 
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="rz4K8daZ3JFcij1kPdIFe6ECQP5BmVATzU/BR6t597wRO8+gZSHpzCCTOFQyVPEZw8H3DmIv2cyqRQ5fF+/nIymTwDBeGQUaiAk5Zw/h/RDMLT8Py6vc56EGYMtJ9sxt">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="BfpG6Md0ZPwMmexbAXJHw1AArLnFDjMMx1DZDKy+RQCZgE2wBuFrG4DDZz0TKgqRvOML3M00pOjkopNJzjDig6n3oo/LBNDtfgdL2b6S/CBfwZo5hBJovjSouoVGUcDd">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -147,7 +147,7 @@
   
   <div class="container container-table">
       <h2 class="mbr-section-title mbr-fonts-style align-center pb-3 display-2">
-          نتيجة البحث</h2>
+          Search Result</h2>
       <h3 class="mbr-section-subtitle mbr-fonts-style align-center pb-5 mbr-light display-5">
             Click blue "Gear" icon in the top right corner to hide/show search and info, change the the table background and other parameters.  In browser click on the table head to sort the table, use search to filter the table.     
       </h3>
