--- a/training.html
+++ b/training.html
@@ -81,7 +81,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="footers" class="cid-rCkuLgo5e0" id="footer6-18">
 
     
 
